[gd_scene load_steps=27 format=3 uid="uid://dml45vv2sy3wx"]

[ext_resource type="Script" path="res://scripts/player_projectile_area_blast.gd" id="1_q8hoi"]
[ext_resource type="Texture2D" uid="uid://cpynywhlji2pr" path="res://assets/sprites/areaBlast.png" id="2_33glf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_drnpq"]
size = Vector2(84.875, 83.75)

[sub_resource type="AtlasTexture" id="AtlasTexture_ln5t2"]
atlas = ExtResource("2_33glf")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5kmn"]
atlas = ExtResource("2_33glf")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ia17i"]
atlas = ExtResource("2_33glf")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnq0s"]
atlas = ExtResource("2_33glf")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_bial5"]
atlas = ExtResource("2_33glf")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ybrxg"]
atlas = ExtResource("2_33glf")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_svpch"]
atlas = ExtResource("2_33glf")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ccrbg"]
atlas = ExtResource("2_33glf")
region = Rect2(448, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ud82x"]
atlas = ExtResource("2_33glf")
region = Rect2(512, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqmf6"]
atlas = ExtResource("2_33glf")
region = Rect2(576, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbc4p"]
atlas = ExtResource("2_33glf")
region = Rect2(640, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vv1bv"]
atlas = ExtResource("2_33glf")
region = Rect2(704, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gy1wb"]
atlas = ExtResource("2_33glf")
region = Rect2(768, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1h1kx"]
atlas = ExtResource("2_33glf")
region = Rect2(832, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_urro6"]
atlas = ExtResource("2_33glf")
region = Rect2(896, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_q8w5w"]
atlas = ExtResource("2_33glf")
region = Rect2(960, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dbjs3"]
atlas = ExtResource("2_33glf")
region = Rect2(1024, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_sfg5g"]
atlas = ExtResource("2_33glf")
region = Rect2(1088, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_iqrao"]
atlas = ExtResource("2_33glf")
region = Rect2(1152, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g84hn"]
atlas = ExtResource("2_33glf")
region = Rect2(1216, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_usqk3"]
atlas = ExtResource("2_33glf")
region = Rect2(1280, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cmsdu"]
atlas = ExtResource("2_33glf")
region = Rect2(1344, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_g8tjk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ln5t2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5kmn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ia17i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qnq0s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bial5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ybrxg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_svpch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ccrbg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ud82x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqmf6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbc4p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vv1bv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gy1wb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1h1kx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_urro6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q8w5w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dbjs3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sfg5g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqrao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g84hn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_usqk3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cmsdu")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="playerProjectileAreaBlast" type="Area2D"]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_q8hoi")

[node name="collision_shape" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_drnpq")

[node name="Projectile_timeout" type="Timer" parent="."]
one_shot = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_g8tjk")
autoplay = "default"
frame_progress = 0.64969

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Projectile_timeout" to="." method="_on_projectile_timeout_timeout"]
